@@ -1,1 +1,2 @@
 .pt <- 1 / 0.352777778
+.stroke <- 96 / 25.4
